# fatto

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ROADMAP.md  docker-compose.yml  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: beta-release.yml  ci.yml  release.yml
android/: .editorconfig  build.gradle.kts  settings.gradle.kts  version.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/kotlin/com/brokenpip3/fatto/: AppInfoTest.kt  CalendarIntegrationTest.kt  DataIntegrityTest.kt  PrefillFiltersTest.kt  PriorityIntegrationTest.kt  RepositoryIntegrityTest.kt  SettingsIntegrationTest.kt  TagsIntegrationTest.kt  TaskIntegrationTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/brokenpip3/fatto/: FattoApplication.kt  MainActivity.kt
android/app/src/main/kotlin/com/brokenpip3/fatto/data/: DateTimeUtils.kt  SearchParser.kt  (+2 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  network_security_config.xml
android/app/src/test/kotlin/com/brokenpip3/fatto/: CalendarDateTest.kt  SearchParserTest.kt  TagsFilterTest.kt  TaskSortTest.kt
android/config/detekt/: detekt.yml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
rust/taskchampion-android/: Cargo.toml
rust/taskchampion-android/.cargo/: config.toml.tpl
rust/taskchampion-android/src/: lib.rs
rust/taskchampion-android/tests/: integration.rs
(+19 files in other folders)
