[package]
name = "taskchampion-android"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
taskchampion = { version = "3.0", features = ["sync", "storage", "bundled"] }
uniffi = { version = "0.31", features = ["build", "cli"] }
thiserror = "2"
# we match taskchampion 3.0.0's rusqlite dependency to avoid link conflict
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1.51.1", features = ["full"] }
futures-util = "0.3.32"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
tempfile = "3.27.0"
uuid = { version = "1", features = ["v4"] }
